<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nigelmcintyre.login.MainActivity_Homepage"
   >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Carbs"
            android:id="@+id/textView4"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Fats"
            android:id="@+id/textView5"
            android:layout_alignBottom="@+id/textView4"
            android:layout_marginLeft="95dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Protein"
            android:id="@+id/textView8"
            android:layout_marginLeft="90dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="140dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCarbs"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFats"
            android:textSize="20sp"
            android:layout_marginLeft="85dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtProtein"
            android:textSize="20sp"
            android:layout_marginLeft="75dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/homepageTxt"
        android:id="@+id/txtHomepage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Remaining Calories:"
            android:id="@+id/textView6"
            android:layout_marginLeft="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCalories"
            android:layout_marginLeft="40dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/addMealText"
            android:id="@+id/btnAddFood"
            android:onClick="addButtonClick"
             />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/addWorkoutText"
            android:id="@+id/btnAddWorkout"
            android:onClick="addButtonClick"
            android:layout_marginLeft="40dp" />


    </LinearLayout>


</RelativeLayout>
